Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,8 +27,10 @@ stages:
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: |
           $(tag)
+        
     - task: ECRPushImage@1
       inputs:
         awsCredentials: 'ECS'
-        imageSource: 'imagename'
+        imageSource: 'imageid'
         repositoryName: 'petproject'
+        sourceImageTag: $(tag)
