Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,3 +36,4 @@ stages:
         repositoryName: 'petproject'
         sourceImageTag: $(tag)
         sourceImageName: petproject
+        regionName: ap-southeast-1
